--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -98,3 +98,13 @@ input.inputError {
 .registerForm button {
   margin-top: 15px;
 }
+
+.reCaptcha {
+  transform: scale(0.8);
+  transform-origin: 0 0;
+  margin: -30px 0 -30px 0 !important;
+}
+
+.rc-imageselect-payload {
+  transform: scale(0.6);
+}
