--- a/src/app/components/Calendar/Calendar.module.css
+++ b/src/app/components/Calendar/Calendar.module.css
@@ -8,21 +8,33 @@
 }
 
 .calendarContainer span {
-  all:initial;
+  all: initial;
 }
 
 .calendarContainer span:hover {
-  all:initial;
+  all: initial;
 }
 
 .personalEvent {
-  background-color: rgb(0, 124, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  align-self: center;
+  background-color: rgb(90, 181, 149);
   color: white;
   border-radius: 8px;
 }
 
 .grupalEvent {
-  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  align-self: center;
+  background-color: #f24e7fff;
   border-radius: 8px;
   color: white;
 }
@@ -35,7 +47,6 @@
   margin-top: -2px;
   align-items: center;
   justify-content: center;
-
 }
 
 .eventDetails {
