--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -77,6 +77,54 @@
   margin: 0 -3px;
 }
 
+.pendingEventsNumber > p:nth-child(1) {
+  display: flex;
+  justify-content: center;
+  margin-left: 10px;
+  align-items: center;
+  color: var(--sr-color-primary);
+  background-color: var(--sr-blue-color-primary);
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  font-size: 14px;
+  animation: toogleCalendary 3s ease-in-out infinite;
+}
+
+.pendingEventsNumber > p:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--sr-blue-color-primary);
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+}
+
+@keyframes toogleCalendary {
+  0% {
+    transform: scale(1);
+  }
+  5% {
+    transform: scale(0.9);
+  }
+  10% {
+    transform: scale(1);
+  }
+  15% {
+    transform: scale(0.9);
+  }
+  20% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /* Mobile */
 @media (max-width: 850px) {
   .header div span {
