--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -4,13 +4,14 @@
 
 .headerH {
   display: flex;
+  position: fixed;
+  width: 100%;
   flex-direction: column;
   align-items: center;
 }
 
 .header {
   display: flex;
-  position: fixed;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
