--- a/src/app/components/modals/pendingEvents/pendingEvents.module.css
+++ b/src/app/components/modals/pendingEvents/pendingEvents.module.css
@@ -12,6 +12,7 @@
   border-radius: 0 0 10px 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   animation: slideDown 0.6s;
+  z-index: 100;
 }
 
 .pendingEvents > span {
