--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,10 @@ a:hover {
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 #body {
   background-color: #fffaff;
   background-color: #fffaff;
