--- a/src/app/(login)/home/page.module.css
+++ b/src/app/(login)/home/page.module.css
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  scroll-behavior: smooth;
 }
 
 .home > div:nth-child(1) {
@@ -111,6 +110,7 @@
   text-align: justify;
   font-weight: 300;
   font-size: 16px;
+  margin-bottom: -40px;
 }
 
 .events {
@@ -246,4 +246,8 @@
   color: var(--sr-blue-color-secundary);
   font-size: 12px !important;
   margin-top: 3px;
+}
+
+.pendingEvents {
+  height: 35px;
 }
