--- a/src/app/(login)/user/page.module.css
+++ b/src/app/(login)/user/page.module.css
@@ -123,5 +123,10 @@
 
 .deleteUser > button {
   width: 120px;
-  margin-bottom: 15px;
+  margin-bottom: 18px;
+}
+
+.deleteUser > input {
+  border: none;
+  border-radius: 0;
 }
