--- a/src/app/(login)/home/page.module.css
+++ b/src/app/(login)/home/page.module.css
@@ -215,6 +215,10 @@
   cursor: pointer;
 }
 
+.card.flipped button {
+  pointer-events: none;
+}
+
 .cardInner {
   position: relative;
   width: 100%;
