--- a/src/app/components/Calendar/Calendar.module.css
+++ b/src/app/components/Calendar/Calendar.module.css
@@ -34,7 +34,7 @@
   justify-content: center;
   height: 30px;
   align-self: center;
-  background-color: #f24e7fff;
+  background-color: rgb(242, 78, 127);
   border-radius: 8px;
   color: white;
 }
