--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 
   --sr-primary-color: #fffaff;
   --sr-secundary-color: #2b232a;
-  --sr-pink-color-primary: #f24e7fff;
+  --sr-pink-color-primary: #f24e7f;
   --sr-pink-color-secundary: #fb0056;
   --sr-blue-color-primary: #f8d964;
   --sr-blue-color-secundary: #364741;
